 * Added getConditionalMarginalVariance method to KrigingResult
 * Deprecated OptimizationAlgorithm::GetLeastSquaresAlgorithmNames

=== Python module ===
 * Add Domain.__contains__ operator

=== Miscellaneous ===
 * Add GeneralizedPareto location parameter

=== Bug fixes ===
 * https://github.com/openturns/openturns/milestone/4?closed=1
 * #1006 (Text drawable does not handle size)
 * #1130 (Inconsistency in FittingTest)
 * #1185 (Bug with Normal.computeMinimumLevelSet method)
 * #1190 (computeProbability clamped by Domain-SmallVolume)
 * #1202 (Sample::sort & Sample::sortAccordingToAComponent only return new Samples)
 * #1216 (The CalibrationResult doc does not match the code)
 * #1247 (KrigingAlgorithm could not compute amplitude analytically with ProductCovarianceModel )


== 1.13 release (2019-06-06) == #release-1.13

=== Library ===

==== Major changes ====
 * Added OPT++ solvers
 * Improved a lot the performace of all the Rosenblatt related computations
 * Added elementary calibration capabilities
 * Added CMinpack, Ceres Solver least-squares solvers

==== New classes ====
 * ParametricPointToFieldFunction
 * LinearModelResult, LinearModelAlgorithm, LinearModelAnalysis
 * OPTpp
 * NearestPointProblem, LeastSquaresProblem
 * CMinpack
 * Ceres
 * DiscreteMarkovChain
 * CalibrationAlgorithm, CalibrationResult, GaussianLinearCalibration, LinearLeastSquaresCalibration
 * NonLinearLeastSquaresCalibration, GaussianNonLinearCalibration
 * Hypergeometric

==== API changes ====
 * Removed deprecated FunctionalChaosRandomVector::getSobol* methods
 * Removed deprecated UserDefinedCovarianceModel constructor based on a Collection<CovarianceMatrix>
 * Removed deprecated FieldFunction,FieldToPointFunction::getSpatialDimension
 * Removed deprecated LinearModelRSquared, LinearModelAdjustedRSquared
 * Deprecated LinearModel, LinearModelFactory
 * Moved HypothesisTest::(Partial|Full)Regression to LinearModelTest
 * Deprecated OptimizationProblem(levelFunction, levelValue)